fix: removes the spacing from the last page indicator (#1056)

--- a/src/tile.scss
+++ b/src/tile.scss
@@ -532,6 +532,10 @@ $fd-tile-action-indicator-offset: 0.25rem !default;
 
         color: var(--sapContent_ContrastTextColor); // TO BE CONFIRMED
       }
+
+      &:last-child {
+        margin: 0;
+      }
     }
 
     &.#{$block}--s {
